--- a/index.html
+++ b/index.html
@@ -1,93 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Event Registration</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.38.4/+esm"></script>
+  <title>تسجيل مؤتمر IQIDS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      font-family: 'Tajawal', sans-serif;
+      background: url('background.PNG') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
+      direction: rtl;
     }
-    .form-container {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      width: 100%;
+    .container {
+      background-color: rgba(255, 255, 255, 0.9);
       max-width: 400px;
+      margin: 50px auto;
+      padding: 30px 25px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     }
-    input, button {
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .header img {
+      max-width: 120px;
+    }
+    .header h1 {
+      font-size: 22px;
+      margin: 10px 0 0;
+      color: #a72828;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+    input {
       width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-      font-size: 1rem;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-sizing: border-box;
     }
     button {
-      background: #4CAF50;
+      margin-top: 20px;
+      background-color: #a72828;
       color: white;
       border: none;
+      padding: 12px;
+      border-radius: 8px;
+      width: 100%;
+      font-size: 16px;
       cursor: pointer;
     }
     button:hover {
-      background: #45a049;
+      background-color: #8c1e1e;
+    }
+    .note {
+      font-size: 13px;
+      color: #555;
+      margin-top: 5px;
     }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>Register for the Event</h2>
-    <form id="registration-form">
-      <input type="text" name="name" placeholder="Full Name" required />
-      <input type="tel" name="phone" placeholder="Phone Number" required />
-      <input type="text" name="occupation" placeholder="Occupation" required />
-      <button type="submit">Register</button>
+  <div class="container">
+    <div class="header">
+      <img src="logo.PNG" alt="شعار الشركة" />
+      <h1>استمارة تسجيل مؤتمر IQIDS</h1>
+    </div>
+    <form id="registrationForm">
+      <label for="name">الاسم الثلاثي باللغة الإنكليزية</label>
+      <div class="note">هذا الاسم سيتم كتابته على شهادة المشاركة بالمؤتمر</div>
+      <input type="text" id="name" name="name" required />
+
+      <label for="phone">رقم الهاتف</label>
+      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (مثال: +964xxxxxxx)</div>
+      <input type="tel" id="phone" name="phone" required />
+
+      <label for="occupation">المهنة</label>
+      <div class="note">مثال: طالب، مهندس، طبيب...</div>
+      <input type="text" id="occupation" name="occupation" required />
+
+      <button type="submit">تسجيل</button>
     </form>
-    <p id="status"></p>
   </div>
 
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
-
-    const supabaseUrl = 'https://vwaaflcmhmfggesqpwoa.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok';
-
-    const supabase = createClient(supabaseUrl, supabaseKey);
-
-    const form = document.getElementById('registration-form');
-    const statusText = document.getElementById('status');
-
-    form.addEventListener('submit', async (e) => {
+  <script>
+    // Connect this with Supabase in the next step
+    document.getElementById('registrationForm').addEventListener('submit', async function(e) {
       e.preventDefault();
+      const name = document.getElementById('name').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const occupation = document.getElementById('occupation').value.trim();
+      const unique_id = crypto.randomUUID();
 
-      const formData = new FormData(form);
-      const uniqueId = crypto.randomUUID(); // Generate a unique ID
+      const { data, error } = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "apikey": "YOUR_SUPABASE_API_KEY_HERE",
+          "Authorization": "Bearer YOUR_SUPABASE_API_KEY_HERE",
+          "Prefer": "return=representation"
+        },
+        body: JSON.stringify({ name, phone, occupation, unique_id })
+      }).then(res => res.json());
 
-      const { data, error } = await supabase
-        .from('attendees')
-        .insert([{
-          name: formData.get('name'),
-          phone: formData.get('phone'),
-          occupation: formData.get('occupation'),
-          unique_id: uniqueId
-        }]);
-
-      if (error) {
-        console.error(error);
-        statusText.textContent = 'Error registering. Please try again.';
+      if (error || data?.message) {
+        alert("حدث خطأ أثناء التسجيل. حاول مرة أخرى.");
       } else {
-        console.log(data);
-        statusText.textContent = 'Registered! You will receive a QR code via WhatsApp soon.';
-        form.reset();
-        // NEXT: trigger QR + WhatsApp from here
+        alert("✅ تم التسجيل بنجاح! سيتم إرسال رمز الدخول عبر واتساب.");
+        // Here we'll add QR + WhatsApp code next
       }
     });
   </script>
