--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <input type="text" id="name" name="name" required />
 
       <label for="phone">رقم الهاتف</label>
-      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (مثال: +964xxxxxxx)</div>
+      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (96479012345678+)</div>
       <input type="tel" id="phone" name="phone" required />
 
       <label for="occupation">المهنة</label>
