--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
     </form>
   </div>
 
-  <script>
-  document.getElementById('registrationForm').addEventListener('submit', async function(e) {
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<script>
+  document.getElementById('registrationForm').addEventListener('submit', async function (e) {
     e.preventDefault();
 
     const name = document.getElementById('name').value.trim();
@@ -100,6 +101,7 @@
     const occupation = document.getElementById('occupation').value.trim();
     const unique_id = crypto.randomUUID();
 
+    // Step 1: Insert into Supabase
     const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
       method: "POST",
       headers: {
@@ -111,17 +113,44 @@
       body: JSON.stringify({ name, phone, occupation, unique_id })
     });
 
-    const resultText = await response.text();
-    console.log("🔍 Raw response from Supabase:", resultText);
-
-    if (response.ok) {
-      alert("✅ تم التسجيل بنجاح! سيتم إرسال رمز الدخول عبر واتساب.");
-      document.getElementById('registrationForm').reset();
-    } else {
-      alert("❌ حدث خطأ أثناء التسجيل. تحقق من وحدة المطور لمعرفة التفاصيل.");
+    if (!response.ok) {
+      alert("❌ حدث خطأ أثناء التسجيل. حاول مرة أخرى.");
+      return;
     }
+
+    // Step 2: Generate QR Code as base64
+    const qrBase64 = await QRCode.toDataURL(unique_id);
+
+    // Step 3: Prepare WhatsApp message
+    const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
+
+    // Step 4: Send via UltraMsg
+    const ultraMsgResponse = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        token: "l8hdltsaf825osn4",
+        to: phone,
+        image: qrBase64,
+        caption: message
+      })
+    });
+
+    const result = await ultraMsgResponse.json();
+    console.log("📤 WhatsApp response:", result);
+
+    if (result?.sent === true || result?.status === "sent") {
+      alert("✅ تم التسجيل بنجاح! تم إرسال رمز الدخول عبر واتساب.");
+    } else {
+      alert("✅ تم التسجيل، لكن حدث خطأ أثناء إرسال الواتساب. يرجى التواصل مع الدعم.");
+    }
+
+    document.getElementById('registrationForm').reset();
   });
 </script>
+
 
 
 
