--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </form>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling/lib/qr-code-styling.js"></script>
 <script>
   document.getElementById('registrationForm').addEventListener('submit', async function (e) {
     e.preventDefault();
@@ -101,71 +101,77 @@
     const occupation = document.getElementById('occupation').value.trim();
     const unique_id = crypto.randomUUID();
 
-    // Step 1: Insert into Supabase
+    // Step 1: Save to Supabase
     const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
-        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
+        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
         "Prefer": "return=representation"
       },
       body: JSON.stringify({ name, phone, occupation, unique_id })
     });
 
     if (!response.ok) {
-      alert("❌ حدث خطأ أثناء التسجيل. حاول مرة أخرى.");
+      alert("❌ حدث خطأ أثناء التسجيل.");
       return;
     }
 
-    // Step 2: Generate QR with name + logo
-    const canvas = document.createElement("canvas");
-    await QRCode.toCanvas(canvas, unique_id, {
-      errorCorrectionLevel: 'H',
-      margin: 2,
-      scale: 8,
-      color: {
-        dark: "#a72828",
-        light: "#ffffff"
+    // Step 2: Generate QR using qr-code-styling
+    const qr = new QRCodeStyling({
+      width: 512,
+      height: 512,
+      data: unique_id,
+      type: "canvas",
+      image: "logo.PNG",
+      dotsOptions: {
+        color: "#a72828",
+        type: "rounded"
+      },
+      backgroundOptions: {
+        color: "#ffffff"
+      },
+      imageOptions: {
+        crossOrigin: "anonymous",
+        imageSize: 0.2
       }
     });
 
-    // Draw name & logo
-    const ctx = canvas.getContext("2d");
-    const logo = new Image();
-    logo.src = "logo.PNG";
-    await new Promise(resolve => { logo.onload = resolve; });
+    // Create canvas container (not visible)
+    const container = document.createElement("div");
+    const canvas = document.createElement("canvas");
+    canvas.id = "qr-canvas";
+    container.appendChild(canvas);
+    document.body.appendChild(container);
+    await qr.append(canvas);
 
-    // Draw logo at center
-    const size = canvas.width;
-    const logoSize = size * 0.2;
-    const logoX = (size - logoSize) / 2;
-    const logoY = (size - logoSize) / 2;
-    ctx.drawImage(logo, logoX, logoY, logoSize, logoSize);
+    // Wait for render
+    await new Promise(resolve => setTimeout(resolve, 500));
+    const baseQR = canvas.toDataURL("image/png");
 
-    // Extend canvas height to add name
+    // Step 3: Draw attendee name on new canvas
+    const img = new Image();
+    img.src = baseQR;
+    await new Promise(resolve => { img.onload = resolve; });
+
     const finalCanvas = document.createElement("canvas");
-    finalCanvas.width = size;
-    finalCanvas.height = size + 40;
-    const finalCtx = finalCanvas.getContext("2d");
+    finalCanvas.width = 512;
+    finalCanvas.height = 580;
 
-    // White background
-    finalCtx.fillStyle = "#ffffff";
-    finalCtx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
+    const ctx = finalCanvas.getContext("2d");
+    ctx.fillStyle = "#ffffff";
+    ctx.fillRect(0, 0, 512, 580);
+    ctx.drawImage(img, 0, 0, 512, 512);
 
-    // Draw original QR code
-    finalCtx.drawImage(canvas, 0, 0);
+    ctx.fillStyle = "#a72828";
+    ctx.font = "22px Tajawal, sans-serif";
+    ctx.textAlign = "center";
+    ctx.fillText(name, 256, 560);
 
-    // Draw name
-    finalCtx.font = "16px Tajawal, sans-serif";
-    finalCtx.fillStyle = "#a72828";
-    finalCtx.textAlign = "center";
-    finalCtx.fillText(name, size / 2, size + 30);
+    const finalQR = finalCanvas.toDataURL("image/png");
 
-    // Convert to base64 image
-    const qrBase64 = finalCanvas.toDataURL("image/png");
-
-    // Step 3: Send via WhatsApp (UltraMsg)
+    // Step 4: Send via WhatsApp
     const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
 
     const ultraMsgResponse = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
@@ -176,23 +182,23 @@
       body: JSON.stringify({
         token: "l8hdltsaf825osn4",
         to: phone,
-        image: qrBase64,
+        image: finalQR,
         caption: message
       })
     });
 
     const result = await ultraMsgResponse.json();
-    console.log("📤 WhatsApp response:", result);
-
-    if (result?.sent === true || result?.status === "sent") {
-      alert("✅ تم التسجيل بنجاح! تم إرسال رمز الدخول عبر واتساب.");
+    if (result.sent || result.status === "sent") {
+      alert("✅ تم التسجيل بنجاح وتم إرسال الرمز عبر واتساب.");
     } else {
-      alert("✅ تم التسجيل، لكن حدث خطأ أثناء إرسال الواتساب.");
+      alert("تم التسجيل، ولكن لم يتم إرسال الواتساب. تحقق من الرقم أو اتصل بالدعم.");
     }
 
     document.getElementById('registrationForm').reset();
+    canvas.remove(); // cleanup
   });
 </script>
+
 
 
 
