--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     const occupation = document.getElementById('occupation').value.trim();
     const unique_id = crypto.randomUUID();
 
-    // Step 1: Save to Supabase
+    // Save to Supabase
     const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
-        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
+        "apikey": "YOUR_REAL_API_KEY_HERE",
+        "Authorization": "Bearer YOUR_REAL_API_KEY_HERE",
         "Prefer": "return=representation"
       },
       body: JSON.stringify({ name, phone, occupation, unique_id })
@@ -118,7 +118,7 @@
       return;
     }
 
-    // Step 2: Generate QR using qr-code-styling
+    // Generate QR with styling
     const qr = new QRCodeStyling({
       width: 512,
       height: 512,
@@ -138,51 +138,46 @@
       }
     });
 
-    // Create canvas container (not visible)
-    const container = document.createElement("div");
-    const canvas = document.createElement("canvas");
-    canvas.id = "qr-canvas";
-    container.appendChild(canvas);
-    document.body.appendChild(container);
-    await qr.append(canvas);
+    // Render QR to canvas
+    const qrCanvas = document.createElement("canvas");
+    await qr.append(qrCanvas);
 
-    // Wait for render
-    await new Promise(resolve => setTimeout(resolve, 500));
-    const baseQR = canvas.toDataURL("image/png");
+    // Wait for render and get PNG
+    const rawImageBlob = await qr.getRawData("image/png");
+    const img = await createImageBitmap(rawImageBlob);
 
-    // Step 3: Draw attendee name on new canvas
-    const img = new Image();
-    img.src = baseQR;
-    await new Promise(resolve => { img.onload = resolve; });
-
+    // Create final canvas with name
     const finalCanvas = document.createElement("canvas");
     finalCanvas.width = 512;
     finalCanvas.height = 580;
-
     const ctx = finalCanvas.getContext("2d");
+
+    // Background
     ctx.fillStyle = "#ffffff";
     ctx.fillRect(0, 0, 512, 580);
-    ctx.drawImage(img, 0, 0, 512, 512);
 
+    // Draw QR
+    ctx.drawImage(img, 0, 0);
+
+    // Draw name
     ctx.fillStyle = "#a72828";
     ctx.font = "22px Tajawal, sans-serif";
     ctx.textAlign = "center";
     ctx.fillText(name, 256, 560);
 
-    const finalQR = finalCanvas.toDataURL("image/png");
+    // Convert to base64
+    const base64QR = finalCanvas.toDataURL("image/png");
 
-    // Step 4: Send via WhatsApp
+    // Send via UltraMsg
     const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
 
     const ultraMsgResponse = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
       method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
+      headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
         token: "l8hdltsaf825osn4",
         to: phone,
-        image: finalQR,
+        image: base64QR,
         caption: message
       })
     });
@@ -191,13 +186,13 @@
     if (result.sent || result.status === "sent") {
       alert("✅ تم التسجيل بنجاح وتم إرسال الرمز عبر واتساب.");
     } else {
-      alert("تم التسجيل، ولكن لم يتم إرسال الواتساب. تحقق من الرقم أو اتصل بالدعم.");
+      alert("تم التسجيل، ولكن لم يتم إرسال الواتساب.");
     }
 
     document.getElementById('registrationForm').reset();
-    canvas.remove(); // cleanup
   });
 </script>
+
 
 
 
