--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     const occupation = document.getElementById('occupation').value.trim();
     const unique_id = crypto.randomUUID();
 
-    // Save to Supabase
+    // 1. Save to Supabase
     const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
-        "apikey": "YOUR_REAL_API_KEY_HERE",
-        "Authorization": "Bearer YOUR_REAL_API_KEY_HERE",
+        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
+        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
         "Prefer": "return=representation"
       },
       body: JSON.stringify({ name, phone, occupation, unique_id })
@@ -118,12 +118,12 @@
       return;
     }
 
-    // Generate QR with styling
+    // 2. Create and render QR using qr-code-styling
     const qr = new QRCodeStyling({
       width: 512,
       height: 512,
-      data: unique_id,
       type: "canvas",
+      data: unique_id,
       image: "logo.PNG",
       dotsOptions: {
         color: "#a72828",
@@ -138,40 +138,33 @@
       }
     });
 
-    // Render QR to canvas
-    const qrCanvas = document.createElement("canvas");
-    await qr.append(qrCanvas);
+    // Get raw QR image as blob
+    const qrBlob = await qr.getRawData("png");
 
-    // Wait for render and get PNG
-    const rawImageBlob = await qr.getRawData("image/png");
-    const img = await createImageBitmap(rawImageBlob);
+    // Convert blob to ImageBitmap
+    const imgBitmap = await createImageBitmap(qrBlob);
 
-    // Create final canvas with name
+    // 3. Create final canvas with name
     const finalCanvas = document.createElement("canvas");
     finalCanvas.width = 512;
     finalCanvas.height = 580;
     const ctx = finalCanvas.getContext("2d");
 
-    // Background
     ctx.fillStyle = "#ffffff";
     ctx.fillRect(0, 0, 512, 580);
+    ctx.drawImage(imgBitmap, 0, 0);
 
-    // Draw QR
-    ctx.drawImage(img, 0, 0);
-
-    // Draw name
     ctx.fillStyle = "#a72828";
     ctx.font = "22px Tajawal, sans-serif";
     ctx.textAlign = "center";
     ctx.fillText(name, 256, 560);
 
-    // Convert to base64
     const base64QR = finalCanvas.toDataURL("image/png");
 
-    // Send via UltraMsg
+    // 4. Send via WhatsApp (UltraMsg)
     const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
 
-    const ultraMsgResponse = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
+    const send = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
@@ -182,16 +175,17 @@
       })
     });
 
-    const result = await ultraMsgResponse.json();
+    const result = await send.json();
     if (result.sent || result.status === "sent") {
-      alert("✅ تم التسجيل بنجاح وتم إرسال الرمز عبر واتساب.");
+      alert("✅ تم التسجيل وتم إرسال الرمز عبر واتساب.");
     } else {
-      alert("تم التسجيل، ولكن لم يتم إرسال الواتساب.");
+      alert("تم التسجيل، لكن حدثت مشكلة في إرسال الرمز عبر واتساب.");
     }
 
     document.getElementById('registrationForm').reset();
   });
 </script>
+
 
 
 
