--- a/index.html
+++ b/index.html
@@ -118,13 +118,7 @@
       return;
     }
 
-    // 2. Prepare visible QR container
-    const tempDiv = document.createElement("div");
-    tempDiv.style.position = "absolute";
-    tempDiv.style.left = "-9999px";
-    document.body.appendChild(tempDiv);
-
-    // 3. Generate QR with qr-code-styling
+    // 2. Create a real canvas and draw QR manually
     const qr = new QRCodeStyling({
       width: 512,
       height: 512,
@@ -143,13 +137,22 @@
       }
     });
 
-    await qr.append(tempDiv);
+    // Create actual canvas container
+    const container = document.createElement("div");
+    container.style.position = "absolute";
+    container.style.left = "-9999px";
+    document.body.appendChild(container);
 
-    // Wait for DOM render
-    await new Promise(resolve => setTimeout(resolve, 1000));
+    const qrCanvas = document.createElement("canvas");
+    qrCanvas.width = 512;
+    qrCanvas.height = 512;
+    container.appendChild(qrCanvas);
 
-    // Capture rendered canvas
-    const qrCanvas = tempDiv.querySelector("canvas");
+    // Render into real canvas
+    await qr.append(qrCanvas);
+    await new Promise(resolve => setTimeout(resolve, 1000)); // Ensure draw finishes
+
+    // Copy canvas to new canvas and draw name
     const finalCanvas = document.createElement("canvas");
     finalCanvas.width = 512;
     finalCanvas.height = 580;
@@ -157,7 +160,7 @@
     const ctx = finalCanvas.getContext("2d");
     ctx.fillStyle = "#ffffff";
     ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
-    ctx.drawImage(qrCanvas, 0, 0);
+    ctx.drawImage(qrCanvas, 0, 0, 512, 512);
 
     ctx.fillStyle = "#a72828";
     ctx.font = "22px Tajawal, sans-serif";
@@ -166,9 +169,9 @@
 
     const base64QR = finalCanvas.toDataURL("image/png");
 
-    tempDiv.remove();
+    container.remove();
 
-    // 4. Send via UltraMsg
+    // 3. Send via UltraMsg
     const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
 
     const send = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
@@ -192,6 +195,7 @@
     document.getElementById('registrationForm').reset();
   });
 </script>
+
 
 
 
