--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
     </form>
   </div>
 
+
+<div id="qr-preview" style="margin: 20px auto; width: 320px; border: 2px dashed #ccc; padding: 20px; text-align: center;">
+  <p>🔍 QR Preview Box (check if rounded and red)</p>
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
 <script>
   document.getElementById('registrationForm').addEventListener('submit', async function (e) {
