--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>تسجيل مؤتمر IQIDS</title>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Tajawal', sans-serif;
-      background: url('background.PNG') no-repeat center center fixed;
-      background-size: cover;
+      background: #f0f0f0;
       color: #333;
       direction: rtl;
     }
     .container {
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: #fff;
       max-width: 400px;
       margin: 50px auto;
       padding: 30px 25px;
       border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
     .header {
       text-align: center;
@@ -80,7 +80,7 @@
       <input type="text" id="name" name="name" required />
 
       <label for="phone">رقم الهاتف</label>
-      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (96479012345678+)</div>
+      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (مثال: +9647xxxxxxx)</div>
       <input type="tel" id="phone" name="phone" required />
 
       <label for="occupation">المهنة</label>
@@ -91,151 +91,36 @@
     </form>
   </div>
 
-  <!-- 🔍 Diagnostic QR Code Preview -->
-<div id="qr-preview" style="margin: 20px auto; width: 320px; border: 2px dashed #ccc; padding: 20px; text-align: center;">
-  <p>🔍 QR Preview Box (check if rounded and red)</p>
-</div>
+  <!-- 🔍 QR Code Diagnostic Preview -->
+  <div id="qr-preview" style="margin: 40px auto; width: 320px; border: 2px dashed #ccc; padding: 20px; text-align: center;">
+    <p>🔍 QR Preview Box (check if rounded and red)</p>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const qr = new QRCodeStyling({
-      width: 300,
-      height: 300,
-      type: "canvas",
-      data: "test-id-1234",
-      image: "logo.PNG",
-      dotsOptions: {
-        color: "#a72828",
-        type: "rounded"
-      },
-      backgroundOptions: {
-        color: "#ffffff"
-      },
-      imageOptions: {
-        crossOrigin: "anonymous",
-        imageSize: 0.2
-      }
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const qr = new QRCodeStyling({
+        width: 300,
+        height: 300,
+        type: "canvas",
+        data: "test-id-1234",
+        image: "logo.PNG",
+        dotsOptions: {
+          color: "#a72828",
+          type: "rounded"
+        },
+        backgroundOptions: {
+          color: "#ffffff"
+        },
+        imageOptions: {
+          crossOrigin: "anonymous",
+          imageSize: 0.2
+        }
+      });
+
+      qr.append(document.getElementById("qr-preview"))
+        .then(() => console.log("✅ QR Code rendered to #qr-preview"))
+        .catch(err => console.error("❌ Failed to render QR code:", err));
     });
-
-    qr.append(document.getElementById("qr-preview"))
-      .then(() => console.log("✅ QR Code rendered to #qr-preview"))
-      .catch(err => console.error("❌ Failed to render QR code:", err));
-  });
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
-<script>
-  document.getElementById('registrationForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
-
-    const name = document.getElementById('name').value.trim();
-    const phone = document.getElementById('phone').value.trim();
-    const occupation = document.getElementById('occupation').value.trim();
-    const unique_id = crypto.randomUUID();
-
-    // 1. Save to Supabase
-    const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-        "Prefer": "return=representation"
-      },
-      body: JSON.stringify({ name, phone, occupation, unique_id })
-    });
-
-    if (!response.ok) {
-      alert("❌ حدث خطأ أثناء التسجيل.");
-      return;
-    }
-
-    // 2. Create a real canvas and draw QR manually
-    const qr = new QRCodeStyling({
-      width: 512,
-      height: 512,
-      data: unique_id,
-      image: "logo.PNG",
-      dotsOptions: {
-        color: "#a72828",
-        type: "rounded"
-      },
-      backgroundOptions: {
-        color: "#ffffff"
-      },
-      imageOptions: {
-        crossOrigin: "anonymous",
-        imageSize: 0.2
-      }
-    });
-
-    // Create actual canvas container
-    const container = document.createElement("div");
-    container.style.position = "absolute";
-    container.style.left = "-9999px";
-    document.body.appendChild(container);
-
-    const qrCanvas = document.createElement("canvas");
-    qrCanvas.width = 512;
-    qrCanvas.height = 512;
-    container.appendChild(qrCanvas);
-
-    // Render into real canvas
-    await qr.append(qrCanvas);
-    await new Promise(resolve => setTimeout(resolve, 1000)); // Ensure draw finishes
-
-    // Copy canvas to new canvas and draw name
-    const finalCanvas = document.createElement("canvas");
-    finalCanvas.width = 512;
-    finalCanvas.height = 580;
-
-    const ctx = finalCanvas.getContext("2d");
-    ctx.fillStyle = "#ffffff";
-    ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
-    ctx.drawImage(qrCanvas, 0, 0, 512, 512);
-
-    ctx.fillStyle = "#a72828";
-    ctx.font = "22px Tajawal, sans-serif";
-    ctx.textAlign = "center";
-    ctx.fillText(name, 256, 560);
-
-    const base64QR = finalCanvas.toDataURL("image/png");
-
-    container.remove();
-
-    // 3. Send via UltraMsg
-    const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
-
-    const send = await fetch("https://api.ultramsg.com/instance116472/messages/image", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        token: "l8hdltsaf825osn4",
-        to: phone,
-        image: base64QR,
-        caption: message
-      })
-    });
-
-    const result = await send.json();
-    if (result.sent || result.status === "sent") {
-      alert("✅ تم التسجيل وتم إرسال الرمز عبر واتساب.");
-    } else {
-      alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
-    }
-
-    document.getElementById('registrationForm').reset();
-  });
-</script>
-
-
-
-
-
-
-
-
-
-
-
+  </script>
+</body>
+</html>
