--- a/index.html
+++ b/index.html
@@ -105,9 +105,17 @@
         data: "test-id-1234",
         image: "logo.PNG",
         dotsOptions: {
-          color: "#a72828",
-          type: "rounded"
-        },
+  color: "#a72828",
+  type: "rounded"
+},
+cornersSquareOptions: {
+  type: "extra-rounded", // rounded outer squares
+  color: "#a72828"
+},
+cornersDotOptions: {
+  type: "dot", // rounded center dots inside corner squares
+  color: "#a72828"
+}
         backgroundOptions: {
           color: "#ffffff"
         },
