--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
   <style>
-    body { margin: 0; font-family: 'Tajawal', sans-serif; background: #f0f0f0; color: #333; direction: rtl; }
+    body {
+  margin: 0;
+  font-family: 'Tajawal', sans-serif;
+  background: url('background.PNG') no-repeat center center fixed;
+  background-size: cover;
+  color: #333;
+  direction: rtl;
+}
+
     .container { background-color: #fff; max-width: 400px; margin: 50px auto; padding: 30px 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); }
     .header { text-align: center; margin-bottom: 20px; }
     .header img { max-width: 120px; }
