--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   direction: rtl;
 }
 
-    .container { background-color: #fff; max-width: 400px; margin: 50px auto; padding: 30px 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); }
+    .container { background-color: #fff; opacity: 0.5; max-width: 400px; margin: 50px auto; padding: 30px 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); }
     .header { text-align: center; margin-bottom: 20px; }
     .header img { max-width: 120px; }
     .header h1 { font-size: 22px; margin: 10px 0 0; color: #a72828; }
