--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
       } else {
         alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
       }
-const admins = {
+<script>
+      const admins = {
   "waqas": "waqas2025",
   "azoz": "azoz2025"
 };
