--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ window.onload = () => {
     document.getElementById("formContainer").style.display = "block";
   }
 };
-
+</script>
       document.getElementById('registrationForm').reset();
     });
   </script>
