--- a/admin.html
+++ b/admin.html
@@ -79,7 +79,7 @@
     <h1>تسجيل دخول المسؤول</h1>
   </div>
   <label for="username">اسم المستخدم</label>
-  <input type="text" id="username" placeholder="waqas أو azoz" />
+  <input type="text" id="username" placeholder="اسم المستخدم" />
   <label for="password">كلمة المرور</label>
   <input type="password" id="password" placeholder="كلمة المرور" />
   <button onclick="login()">تسجيل الدخول</button>
