--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
       const name = document.getElementById('name').value.trim();
       const phone = document.getElementById('phone').value.trim();
       const occupation = document.getElementById('occupation').value.trim();
-      const unique_id = crypto.randomUUID();
-
+      
       // Save to Supabase
-      const response = await fetch("https://uckmsmyfjsspbgbrwvzf.supabase.co", {
+      const response = await fetch("https://uckmsmyfjsspbgbrwvzf.supabase.co/rest/v1/Registration", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
