--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       e.preventDefault();
       const name = document.getElementById('name').value.trim();
       const phone = document.getElementById('phone').value.trim();
-      const occupation = document.getElementById('occupation').value.trim();
+      const occupation = document.getElementById('occupation').value;
       
       // Save to Supabase
       const response = await fetch("https://uckmsmyfjsspbgbrwvzf.supabase.co/rest/v1/Registration", {
